# CardDealerModularized

./: .clang-format  .gitignore  README.md  TODO.md  platformio.ini  print_large_symbols.py
CardDealerMain/: CardDealerMain.ino  Config.h  Enums.h  Faces.h  Game.h  GameRegistry.h  HandleButtons.h  PinDefintions.h  README.md
CardDealerMain/games/: GoFish.h  Uno.h
lib/NHY3274TH/: CMakeLists.txt  NHY3274TH.cpp  NHY3274TH.h  library.properties  license.txt
lib/NHY3274TH/examples/colorview_NHY2374TH/: colorview_NHY2374TH.ino
src/: Config.ino  Definitions.h  Enums.h  Game.h  GameRegistry.h  LICENSE.txt  README.md  stock.ino
src/games/: GoFish.h
